2015-10-09  Charlie Zender  <zender@uci.edu>

	* Hard-code AIRS L2 dimension names: Geo[X]Track:L2_Standard_atmospheric&surface_product

	* Hard-code AIRS L3 dimension names: [XY]Dim:location

	* Fix new logic bug in nco_grd_nfr()

2015-10-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha06 final changes';git push
	git tag -a 4.5.3-alpha06 -m 'Version 4.5.3-alpha06 tag: curvilinear regridding';git push --tags

	* Regridded WRF looks OK---range and location are good. Still need precise evaluation.

	* Wow, curvilinear grids now actually run, though flg_grd_out_crv only reaches half-way to the end of nco_rgr_map()

	* Introduce flg_grd_out_crv in nco_rgr_map()

	* Update maps to 20150901 versions in NCO regression tests, everything passes on dust

2015-10-04  Charlie Zender  <zender@uci.edu>

	* Saw "The Maritan". Psyched to do NASA work. nco_grd_nfr() now	correctly infers WRF.

2015-10-02  Charlie Zender  <zender@uci.edu>

	* Re-establish dust.ess.uci.edu as regression test server for scp

	* Add ncrename regression test simultaneously renaming multiple dimensions

	* NCO 4.5.3-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha05 final changes';git push
	git tag -a 4.5.3-alpha05 -m 'Version 4.5.3-alpha05 tag: ncatted, mk crv, lon_crv, sph_plg';git push --tags

	* Fix (relatively bad) bug introduced in 4.5.1 where blank attribute names dump core rather than expanding into all attribute names

	* Add ncatted regression test for deleting all attributes

2015-10-01  Charlie Zender  <zender@uci.edu>

	* nco_grd_mk() constructs correct degenerate SLD grids (verified area, corners)

	* Apply nco_sph_plg_area() to SLD

	* Functionalize spherical polygon area calculation into nco_sph_plg_area()

2015-09-30  Charlie Zender  <zender@uci.edu>

	* Corrected UL corner, but SCRIP file still appears to be invalid

2015-09-29  Charlie Zender  <zender@uci.edu>
